// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Request should execute a request 1`] = `
Object {
  "body": "{\\"hello\\": \\"world\\"}",
  "request": Object {
    "body": Object {
      "username": "seich",
    },
    "endpoint": "http://martianwabbit.com/user",
    "headers": Object {
      "authentication": "BEARER abc123",
    },
  },
  "response": Object {
    "body": "{\\"hello\\": \\"world\\"}",
    "headers": Array [],
    "status": 200,
  },
}
`;

exports[`Request should execute a request 2`] = `
Object {
  "body": "{\\"hello\\": \\"world\\"}",
  "request": Object {
    "body": Object {},
    "endpoint": "http://martianwabbit.com/user",
    "headers": Object {},
  },
  "response": Object {
    "body": "{\\"hello\\": \\"world\\"}",
    "headers": Array [],
    "status": 200,
  },
}
`;

exports[`Request should use modifiers 1`] = `
Array [
  Array [
    Object {
      "endpoint": "http://martianwabbit.com/user",
      "headers": Object {},
      "method": "GET",
      "payload": Object {},
      "query": Object {},
    },
    Object {
      "alias": "show",
      "endpoint": "http://martianwabbit.com",
      "request": "GET /user",
    },
  ],
]
`;
